# terrabloom

./: LICENSE  RAG.ipynb  README.md  api-test-459905-8577acea1327.json  app.py  main.py  pyproject.toml  rag-final.ipynb  requirements.txt  run.py  table_schema.csv
chrome_langchain_db/: chroma.sqlite3
chrome_langchain_db1/: chroma.sqlite3
config/: __init__.py  config.py  settings.py
conversations/: 045d61d8-3804-43a9-922a-8de55296a4b0.json  16da516c-9543-4112-a71e-bd59ebf9e513.json  2475f345-07b9-46f4-9cdc-d96ca996b639.json  68a559a2-8c07-435f-ba20-bd13e1742dfe.json  85f1baf2-1748-434f-803f-6e06e2293378.json  9bac38ea-a92d-4b4d-b2ec-abd3d6b4e91d.json  b219751e-f891-4036-b2b2-e42594c5220b.json  f927da8a-ea77-482e-a123-6f1366a4fd39.json
data/: table_schema.csv
database/: connection.py  conversations.py
faiss_ivf_index/: index.faiss  index.pkl
ivf_schema_store/: config.json  documents.pkl  ivf_index.faiss  metadata.pkl
llm/: chat_models.py
models/: __init__.py  database.py  embeddings.py  llm.py
rag/: chain.py
services/: __init__.py  query_chain.py  rag_chain.py  retriever.py
tests/: test_config.py  test_database_connection.py  test_integration.py  test_llm_chat_models.py  test_rag_chain.py  test_schema_extract.py  test_vector_store_retriever.py
utils/: __init__.py  helpers.py  schema_extract.py
vector_store/: ivf_faiss_store.py  retriever.py
